--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "keywords": [
     "JavaScript",
     "format",
-    "style",
-    "format"
+    "jsfmt"
   ],
   "author": {
     "name": "1000ch",
