--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/1000ch/atom-jsfmt#readme",
   "dependencies": {
+    "cosmiconfig": "^1.1.0",
     "jsfmt": "^0.5.2"
   }
 }
