--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "homepage": "https://github.com/1000ch/atom-jsfmt#readme",
   "dependencies": {
-    "cosmiconfig": "^1.1.0",
+    "execa": "^0.6.0",
     "jsfmt": "^0.5.3"
   }
 }
