--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.5.0",
   "private": true,
   "description": "Format your JavaScript using jsfmt",
+  "scripts": {
+    "test": "eslint ."
+  },
   "activationCommands": {
     "atom-workspace": [
       "jsfmt:execute"
@@ -41,5 +44,8 @@
   "dependencies": {
     "execa": "^0.6.0",
     "jsfmt": "^0.5.3"
+  },
+  "devDependencies": {
+    "eslint": "^3.17.1"
   }
 }
