Enable Travis CI integration

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "author": {
     "name": "1000ch",
     "email": "shogo.sensui@gmail.com",
-    "url": "http://github.com/1000ch"
+    "url": "https://github.com/1000ch"
   },
   "license": "MIT",
   "bugs": {
